@@ -100,6 +100,8 @@ struct ec_fsm_master
     unsigned int topology_change_pending; /**< bus topology changed */
     ec_slave_state_t slave_states; /**< states of responding slaves */
     unsigned int validate; /**< non-zero, if validation to do */
+    unsigned int tainted; /**< non-zero, if the current bus topology does
+                            not meet the initial conditions */
     ec_slave_t *slave; /**< current slave */
     ec_eeprom_write_request_t *eeprom_request; /**< EEPROM write request */
     off_t eeprom_index; /**< index to EEPROM write request data */
