@@ -120,6 +120,9 @@ struct ec_master
 
     int debug_level; /**< master debug level */
     ec_stats_t stats; /**< cyclic statistics */
+    unsigned int pdo_slaves_offline; /** number of slaves, for which PDOs
+                                       were registered and that are offline
+                                       (used for bus status) */
 
     int thread_id; /**< master thread PID */
     struct completion thread_exit; /**< thread completion object */
