@@ -206,6 +206,7 @@ struct ec_slave
     ec_slave_online_state_t online_state; /**< online state */
     unsigned int self_configured; /**< slave was configured by this master */
     unsigned int error_flag; /**< stop processing after an error */
+    unsigned int pdos_registered; /**< non-zero, if PDOs were registered */
 
     // addresses
     uint16_t ring_position; /**< ring position */
